--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
   "engines": {
     "node": "16.13.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "swiper": "^8.2.4"
+  }
 }
